[tool.poetry]
name = "vue-runtime-env-injector"
version = "0.1.0"
description = ""
authors = ["Tim OSullivan <tim@lanster.dev>"]

[tool.poetry.dependencies]
python = "^3.8.6"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
Jinja2 = "^2.11.2"
aiofiles = "^0.6.0"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"
uvloop = { version = "^0.14.0", markers = "sys_platform == 'linux'" }
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
